--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,2 +1,3 @@
 github: brandonhimpfen
-custom: ['https://www.buymeacoffee.com/brandonhimpfen']
+ko_fi: brandonhimpfen
+custom: ['https://paypal.me/brandonhimpfen', 'https://brandon.tiny.us/donate']
