--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,3 +1,1 @@
-github: brandonhimpfen
-ko_fi: brandonhimpfen
-custom: ['https://paypal.me/brandonhimpfen', 'https://himpfen.xyz']
+github: boldoutlook
